PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-main_void/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:7: error: variable or field ‘a’ declared void
    2 |  void a=5;
      |       ^

return code: 1
